--- a/Assingment/templates/singup.html
+++ b/Assingment/templates/singup.html
@@ -8,30 +8,38 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Sing Up Now!</title>
   </head>
   <body>
-    <form>
+  <div class="container text-light bg-dark" style="width: 40%; border-radius: 5%; padding: 80px; margin-top: 5%;">
+       <form action="/singup" method="post">
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <label class="form-label">User Name: </label>
+    <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
+    <div hidden class="form-text">We'll never share your email with anyone else.</div>
   </div>
         <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <label for="exampleInputEmail1" class="form-label">Email address:</label>
+    <input type="email" class="form-control" name="email">
+    <div class="form-text">We'll never share your email with anyone else.</div>
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <label  class="form-label">Mobile Number: </label>
+    <input type="number" class="form-control" name="mobile">
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+           <div class="mb-3">
+    <label  class="form-label">Password: </label>
+    <input type="password" class="form-control" name="password">
+    </div>
+            <div class="mb-3">
+    <label  class="form-label">Re-enter Password: </label>
+    <input type="password" class="form-control" name="re_password">
   </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+  </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
