--- a/Assingment/templates/login.html
+++ b/Assingment/templates/login.html
@@ -11,22 +11,24 @@
     <title>Sing Up</title>
   </head>
   <body>
-    <form>
+  <div class="container text-light bg-dark" style="width: 40%; border-radius: 5%; padding: 80px; margin-top: 5%;">
+      <h1 class="display-5 mb-4 text-justify">Log In</h1>
+     <form action="/login" method="post">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    <input type="email" class="form-control" name="email">
+    <div id="emailHelp" class="form-text" style="color: red">{{ email_mess }}</div>
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <label  class="form-label">Password</label>
+    <input type="password" class="form-control" name="enter_pass">
+      <div id="emailHelp" class="form-text" style="color: red">{{ pass_mess }}</div>
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
+
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+  </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
