--- a/Assingment/templates/login.html
+++ b/Assingment/templates/login.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Sing Up</title>
+    <title>Log In</title>
   </head>
-  <body>
+  <body style=" background-color:#0d1117;">
   <div class="container text-light bg-dark" style="width: 40%; border-radius: 5%; padding: 80px; margin-top: 3%;">
       <h1 class="display-5 mb-4 text-justify">Log In</h1>
      <form action="/login" method="post">
@@ -25,7 +25,10 @@
       <div id="emailHelp" class="form-text" style="color: red">{{ pass_mess }}</div>
   </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Log In</button>
+
+         <br>
+          <h6 class="mb-4 d-1">Create New Account: <a href="{{url_for('singup')}}> Sing Up </a></h6>
 </form>
   </div>
 
