--- a/Assingment/templates/singup.html
+++ b/Assingment/templates/singup.html
@@ -10,9 +10,11 @@
 
     <title>Sing Up Now!</title>
   </head>
-  <body>
+  <body style=" background-color:#0d1117; ">
+
   <div class="container text-light bg-dark" style="width: 40%; border-radius: 5%; padding: 80px; margin-top: 3%;">
-       <form action="/singup" method="post">
+      <h1 class="display-5 mb-4 text-justify">SingUp</h1>
+      <form action="/singup" method="post">
   <div class="mb-3">
     <label class="form-label">User Name: </label>
     <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
@@ -21,22 +23,27 @@
         <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address:</label>
     <input type="email" class="form-control" name="email">
-    <div class="form-text">We'll never share your email with anyone else.</div>
   </div>
   <div class="mb-3">
-    <label  class="form-label">Mobile Number: </label>
-    <input type="number" class="form-control" name="mobile">
+    <label class="form-label" >Mobile Number: </label>
+    <input type="number" class="form-control" name="mobile" min="1000000000" max="1999999999">
+     <div  class="form-text" style="color: red">{{ mobile_mess }}</div>
   </div>
            <div class="mb-3">
     <label  class="form-label">Password: </label>
     <input type="password" class="form-control" name="password">
-    </div>
+     <div  class="form-text" style="color: red">{{ passmess }}</div>
+           </div>
             <div class="mb-3">
     <label  class="form-label">Re-enter Password: </label>
     <input type="password" class="form-control" name="re_password">
+    <div  class="form-text" style="color: red">{{ passmess }}</div>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
+          <br>
+          <br>
+          <h6 class="mb-4 d-1"> Already Have Account: <a href="{{url_for('login')}}>Log In</a></h6>
 </form>
 
   </div>
