--- a/Assingment/templates/login.html
+++ b/Assingment/templates/login.html
@@ -13,7 +13,7 @@
   <body style=" background-color:#0d1117;">
   <div class="container text-light bg-dark" style="width: 40%; border-radius: 5%; padding: 80px; margin-top: 3%;">
       <h1 class="display-5 mb-4 text-justify">Log In</h1>
-     <form action="/login" method="post">
+     <form action="/" method="post">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input type="email" class="form-control" name="email">
@@ -26,9 +26,9 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Log In</button>
-
-         <br>
-          <h6 class="mb-4 d-1">Create New Account: <a href="{{url_for('singup')}}> Sing Up </a></h6>
+     </br>
+         </br>
+          <h6 class="mb-4 d-1">Create New Account: <a href="{{url_for('singup')}}"> Sing Up </a></h6>
 </form>
   </div>
 
