--- a/Assingment/templates/singup.html
+++ b/Assingment/templates/singup.html
@@ -41,9 +41,9 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
-          <br>
-          <br>
-          <h6 class="mb-4 d-1"> Already Have Account: <a href="{{url_for('login')}}>Log In</a></h6>
+          </br>
+          </br>
+          <h6 class="mb-4 d-1"> Already Have Account: <a href="{{url_for('login')}}"> Log In</a></h6>
 </form>
 
   </div>
