--- a/Session/templates/protected.html
+++ b/Session/templates/protected.html
@@ -5,6 +5,7 @@
 <body>
     <form method = "post" action = "http://localhost:5000/success">
         <table>
+            <tr><td>Username</td><td><input type = 'username' name = 'email'></td></tr>
             <tr><td>Email</td><td><input type = 'email' name = 'email'></td></tr>
             <tr><td>Password</td><td><input type = 'password' name = 'pass'></td></tr>
             <tr><td><input type = "submit" value = "Submit"></td></tr>
